# AIExperiments

./: Gradient field image detector   Knowledge  dumb_and_dumber_llm_loop  extracted_entities.txt  pre_algebra_for_adults.md  readme.md
devBoxSetup/: .gitignore  README.md  pyproject.toml
devBoxSetup/automated_setup/: .gitignore  readme.md  setup.config.json.example  setup.ps1  setup.sh
devBoxSetup/automated_setup/lib/: artifactory.ps1  artifactory.sh  corporate.ps1  corporate.sh  databricks.ps1  databricks.sh  install.ps1  install.sh  prerequisites.ps1  prerequisites.sh  ui.ps1  ui.sh
devBoxSetup/automated_setup/templates/: .pre-commit-config.yaml.template  pyproject.toml.template
devBoxSetup/automated_setup/terminals/: 1.txt
devBoxSetup/configurator/: __init__.py  __main__.py  app.py  generator.py  profiles.py  runner.py  schema.json
devBoxSetup/configurator/static/: app.js  index.html  style.css
devBoxSetup/configurator/templates/: azure-pipelines-python.yml.j2  databricks.yml.j2  dotenv.j2  profile-summary.md.j2  team-customization.yaml.j2  (+2 more)
devBoxSetup/devbox/: team-customization.yaml  user-customization.yaml
devBoxSetup/ide/: extensions.txt  settings.json
devBoxSetup/idiot_proof/: Setup-DevEnvironment.ps1  readme.md  standard_practice.ps1
devBoxSetup/scripts/: doctor.sh
devBoxSetup/templates/: .env.example  .gitignore  azure-pipelines-python.yml  databricks.yml  pyproject-etl.toml
devBoxSetup/windows/: .wslconfig.example  bootstrap.ps1
devBoxSetup/wsl/: azure-devops-setup.sh  bootstrap.sh  databricks-setup.sh  node-setup.sh  python-setup.sh
(+113 files in other folders)
