[project]
name = "devbox-setup"
version = "0.1.0"
description = "Local-only DevBox environment configurator and bootstrap toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "pydantic>=2.0",
]

[project.scripts]
devbox-configurator = "configurator.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["configurator"]